add ai delete
